# pydc-control

./: .bumpversion.cfg  .editorconfig  .gitignore  .pylintrc  .travis.yml  LICENSE.txt  MANIFEST.in  README-example.rst  README.md  config.yml.example  docker-compose.env.example  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  tox.ini
.github/workflows/: build.yaml
pydc_control/: __init__.py  cli.py  commands.py  config.py  data.py  docker_compose_utils.py  docker_utils.py  exceptions.py  log.py
pydc_control/test/: __init__.py  test_data.py  test_docker_compose_utils_dynamic_options.py  test_integration.py
sample_project/: .gitignore
sample_project/project-dc-template/: docker-compose-template.yml
sample_project/project-dev/: docker-compose.yml
sample_project/project-multiple-services/: docker-compose.yml
sample_project/sample-control/: config.yml  docker-compose.env
tests/: test_data.py
