[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pydc-control"
version = "1.49"
description = "Used to control multiple docker compose projects in a coordinated way."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adobe", email = "noreply@adobe.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "Jinja2>=2.7.2",
    "PyYAML>=5.1.2",
    "requests",
    "pre-commit>=2",
]

[project.urls]
Homepage = "https://github.com/adobe/pydc-control"
Repository = "https://github.com/adobe/pydc-control"

[dependency-groups]
dev = [
    "pytest>=6.2.4",
    "pytest-randomly>=3.10.1",
    "pytest-cov>=2.12.1",
    "ruff>=0.12.7",
    "ruff-lsp>=0.0.45",
    "pre-commit>=3.6",
    "docker>=7",
    "tox-pyenv",
]

[tool.uv.build-backend]
module-name = "pydc_control"
module-root = ""
source-exclude = ["pydc_control/test"]
wheel-exclude = ["pydc_control/test"]

[tool.ruff]
# Enable the copyright rule
preview = true

[tool.ruff.lint]
extend-select = ["CPY"]

[tool.ruff.lint.extend-per-file-ignores]
"sample_project/*" = ["CPY"]

[tool.ruff.lint.flake8-copyright]
min-file-size = 200
notice-rgx = '''"""
Copyright [(2)\d{3}]* Adobe
All Rights Reserved.

NOTICE: Adobe permits you to use, modify, and distribute this file in accordance
with the terms of the Adobe license agreement accompanying it.
"""'''
